# count_constant_sites

./: Cargo.toml  LICENSE  README.md
data/: input_fasta1.fasta
src/: lib.rs  main.rs
