[package]
name = "constant_sites"
description = "Compute the count of cases in constant sites in a (FASTA) multiple sequence alignment"
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/pvanheus/count_constant_sites"
version = "0.1.0"
authors = ["Peter van Heusden <pvh@sanbi.ac.za>"]
edition = "2018"


[dependencies]
seq_io = "*"
flate2 = "*"
clap = "*"

[profile.release]
lto = true