[package]
name = "count_constant_sites"
description = "Compute the count of cases in constant sites in a (FASTA) multiple sequence alignment"
license = "MIT"
homepage = "https://github.com/pvanheus/count_constant_sites"
version = "0.1.1"
authors = ["Peter van Heusden <pvh@sanbi.ac.za>"]
edition = "2018"


[dependencies]
seq_io = "0.3.0"
flate2 = "1.0.12"
clap = "2.33.0"

[profile.release]
lto = true